# friday

./: .gitignore  CLAUDE.md  LICENSE  README.md  conftest.py  pyproject.toml  test_script.py
debug/: README.md  debug.py  debug_db.py  debug_notes.py  debug_password.py  fix_db.py  fix_db_simple.py  test_login.py
docs/: api.md  brief.md  database.md  development.md  pgvector_integration.md  progress.md
friday-editor/: package.json  pnpm-lock.yaml  tailwind.config.ts
friday-editor/app/: globals.css  layout.tsx  page.tsx
friday-editor/components/: editor-toolbar.tsx  markdown-editor.tsx  note-sidebar.tsx
src/: config.py
src/api/: dependencies.py  main.py
src/api/middleware/: auth.py
src/api/routes/: __init__.py  note_routes.py  user_routes.py
src/application/use_cases/: note_uc.py  user_uc.py
src/core/domain/: note.py  user.py
src/core/repositories/: note_repo.py  user_repo.py
src/core/services/: auth_service.py  cache_service.py  vector_service.py
src/core/use_cases/: note_dtos.py  user_dtos.py
src/infrastructure/persistence/: utils.py
src/infrastructure/persistence/memory/: note_repo.py  user_repo.py
src/infrastructure/persistence/sqlalchemy/: __init__.py  enhanced_models.py  models.py  note_repo.py  pg_note_repo.py  user_repo.py
src/infrastructure/services/jwt/: auth_service.py
src/infrastructure/services/redis/: cache_service.py
src/infrastructure/services/vector/: __init__.py  basic_vector_service.py
tests/api/routes/: test_user_routes.py
tests/application/use_cases/: test_note_service.py  test_user_service.py
tests/core/domain/: test_note.py  test_user.py
tests/infrastructure/persistence/memory/: test_note_repo.py  test_user_repo.py
tests/infrastructure/persistence/sqlalchemy/: test_pg_vector.py
tests/infrastructure/services/jwt/: test_auth_service.py
tests/infrastructure/services/redis/: test_cache_service.py
